--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 Django==2.2.5
 django-cors-headers==3.1.0
+django-filter==2.2.0
 django-rest-swagger==2.2.0
 djangorestframework==3.10.3
 idna==2.8
