--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,14 +7,19 @@ django-cors-headers==3.1.0
 django-filter==2.2.0
 django-rest-swagger==2.2.0
 djangorestframework==3.10.3
+factory-boy==2.12.0
+Faker==2.0.1
 idna==2.8
 itypes==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 openapi-codec==1.3.2
+python-dateutil==2.8.0
 pytz==2019.2
 requests==2.22.0
 simplejson==3.16.0
+six==1.12.0
 sqlparse==0.3.0
+text-unidecode==1.2
 uritemplate==3.0.0
 urllib3==1.25.3
